@@ -1,3 +1,9 @@
+2011-04-05  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.6.1.25 Released.
+
+	* AST-2011-005: File Descriptor Resource Exhaustion
+
 2011-03-17  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.6.1.24 Released.
